--- a/contact.css
+++ b/contact.css
@@ -6,23 +6,26 @@
 }
 
 header {
-    height: 200px;
-    background-image: url("https://img.freepik.com/fotos-premium/comunicacion-conceptual-contactenos-o-linea-directa-atencion-al-cliente-personas-conectan-mano-negocios-tocando-pantalla-virtual-iconos-contacto-correo-electronico-direccion-chat-vivo-wifi-internet_162459-2015.jpg");
-    background-position: center;
-    background-size: cover;
+    height: 500px;
+    background-image: url("https://wallpapers.com/images/hd/gotham-bat-signal-in-the-sky-hqdxp34ao39p75bd.jpg");
+    background-position: 100%;
+    background-size:cover;
     padding-top: 40px;
 }
 
 .navigation {
-    width: 15%;
-    height: 60%;
+    width: 50%;
+    height: 10%;
     background-color: #fff;
     padding: 20px 20px;
-    margin-left: 900px;
+    margin-left: 300px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
 }
 
 .menu {
-    display: block;
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -35,7 +38,7 @@ li {
     transition: .5s;
     display: flex;
     justify-content:right;
-    padding: 10px;
+    padding: 50px;
 }
 
 li:hover {
@@ -44,14 +47,13 @@ li:hover {
     
 
 .main-contact {
-    width: 100%;
     font-size: 18px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-image: url("https://dimensa.com/wp-content/uploads/2022/09/Background-Check.jpg") ;
+    color:cadetblue;
+    background-image: url("https://cdn.dribbble.com/users/31884/screenshots/659591/media/c31ed9efd3eab767b2f929f4e791b450.jpg?resize=400x300&vertical=center") ;
     background-size: cover;
     background-position: 100%;
-    margin: 0;
-    padding: 20px;
+    padding: 10px;
 }
 
 .form-contact {
@@ -80,48 +82,32 @@ li:hover {
 }
 
 footer {
-    height: 400px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-    background-image: url("https://t3.ftcdn.net/jpg/05/08/74/68/360_F_508746888_tl2EUHrIm1NpPBcwLufaAzbMqNO2kqwR.jpg");
-    background-position: center;
+    height: 170px;
+    background-image: url("https://t4.ftcdn.net/jpg/02/66/01/31/360_F_266013160_DzhOtuwGf7uFfmkABaYDgq528vgRXGVa.jpg") ;
     background-size: cover;
+    background-position: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
 
 #logofooter {
-    width: 250px;
+    width: 150px;
     height: auto;
-    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 15px;
 }
 
-#spanfooter-one {
+#spanfooter {
     color: #fff;
     font-family: 'Courier New', Courier, monospace;
-   
-}
-
-#spanfooter-two {
-    color: #fff;
-    font-weight: bold;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-   
-}
-
-#spanfooter-three {
-    color: #fff;
-    font-weight: bold;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
-}
-
-#Copyright {
-    color: black;
-}
-
-.footer-nav {
-    display: none;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer-list {
