--- a/fotos.css
+++ b/fotos.css
@@ -7,41 +7,64 @@
 }
 
 header {
-    width: 100%;
-    height: 250px;
-    background-image: url("https://i.pinimg.com/736x/0a/e8/88/0ae888cfe062486a6b2afe0ba0864799.jpg");
-    background-position: center;
-    padding-top: 40px;
+    height: 120px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    background-color: black;
 }
 
 nav {
-    width: 50%;
-    height: 10%;
-    padding: 20px 20px;
-    margin-left: 300px;
-    margin-top: 100px;
-    background-color: whitesmoke;
-    margin-top: 185px;
+    width: 70%;
+    
 }
 
 ul {
     display: flex;
-    justify-content:space-between;
-    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    
 }
 
 li {
     list-style: none;
-    font-size: 22px;
-    font-family:fantasy;
-    color: purple;
+    color: white;
     cursor: pointer;
+    font-size: 22px;
     transition: .5s;
+    font-family: 'kdam Thmor Pro', sans-serif;
+}
+
+li:hover {
+    color: brown;
+}
+
+.logoheader {
+    width: 250px;
+    height: auto;
+}
+
+.banner {
+    background-image: url("https://i.pinimg.com/736x/0a/e8/88/0ae888cfe062486a6b2afe0ba0864799.jpg");
+    background-position:50% 50%;
+    background-size: auto;
+    width: 100%;
+    height: 400px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .construction {
+    background-image: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgLE11pewiK5TZfznQl2O6VNT4KIqDS2IlIp9ZNAkiPdGmMgFZ0nYaxYMq5550hK7bnQuqP23Na1TL6iT4p6BSlk0N1MHmPfDhPTk8hZxTUumvl7lB6X95hpmnXSCjq8ETGuRtvt5gLoZjA/s1600/site_em_construcao.jpg");
+    background-position:50% 50%;
+    background-size: cover;
     width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 footer {
