--- a/contact.css
+++ b/contact.css
@@ -3,6 +3,7 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
+    
    
 }
 
@@ -81,34 +82,119 @@ li:hover {
 }
 
 footer {
-    height: 170px;
+    width: 100%;
+    height: auto;
+    align-items: center;
     background-color: black;
+    padding-top: 20px;
+}
+
+.logoLFimage {
+    width: auto;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-}
-
-#logofooter {
-    width: 150px;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 15px;
 }
 
 #spanfooter {
     color: #fff;
     font-family: 'Courier New', Courier, monospace;
-    margin-right: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: black;
 }
 
-.footer-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.footer-nav {
+    display: none;
+}
+
+
+@media(max-width: 768px){
+    
+    nav {
+        display: none;
+    }
+
+    #banner {
+        background-position: 40%;
+        align-items: center;
+    }
+
+    #trailler-container {
+        width: 100%;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .content {
+        width: 95%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .trailler {
+        width: 100%;
+    }
+    
+    #sinopse {
+        width: 95%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .description {
+        width: 100%;
+    }
+
+    .button {
+        width: 100%;
+    }
+
+    .cards-content {
+        grid-template-columns: 1fr;
+        margin-top: 50px;
+    }
+
+    footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .logoLF {
+        width: 50%;
+        display: block;
+        justify-content: center;
+    }
+
+    .logoLFimage {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    #spanfooter {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .footer-nav {
+        width: 50%;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+       
+    }
+
+    .footer-list {
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+    }
+       
 }
