--- a/fotos.css
+++ b/fotos.css
@@ -4,6 +4,7 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
+    background-color: black;
 }
 
 header {
@@ -43,7 +44,7 @@ li:hover {
     height: auto;
 }
 
-.banner {
+#banner {
     width: 100%;
     background-image: url("https://i.pinimg.com/736x/0a/e8/88/0ae888cfe062486a6b2afe0ba0864799.jpg");
     background-size: auto;
@@ -95,35 +96,91 @@ li:hover {
 }
 
 footer {
+    width: 100%;
     height: 170px;
-    background-color:black;
+    margin-top: 100px;
+    align-items: center;
+}
+
+.logoLFimage {
+    width: auto;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-}
-
-#logofooter {
-    width: 150px;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 15px;
 }
 
 #spanfooter {
     color: #fff;
     font-family: 'Courier New', Courier, monospace;
-    margin-right: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.footer-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.footer-nav {
+    display: none;
 }
 
+
+@media(max-width: 768px){
+    
+    nav {
+        display: none;
+    }
+
+    #banner {
+        background-position: 40%;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .cards-content {
+        grid-template-columns: 1fr;
+        width: 100%;
+        height: 1000px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .logoLF {
+        width: 50%;
+        display: block;
+        justify-content: center;
+    }
+
+    .logoLFimage {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    #spanfooter {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .footer-nav {
+        width: 50%;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+       
+    }
+
+    .footer-list {
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+    }
+       
+}
