--- a/style.css
+++ b/style.css
@@ -166,34 +166,23 @@ li:hover {
 }
 
 footer {
+    width: 100%;
     height: 170px;
     margin-top: 100px;
+    align-items: center;
+}
+
+.logoLFimage {
+    width: auto;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    background-color: none;
-}
-
-#logofooter {
-    width: 150px;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 15px;
 }
 
 #spanfooter {
     color: #fff;
     font-family: 'Courier New', Courier, monospace;
-    margin-right: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.footer-list {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -205,11 +194,7 @@ footer {
 
 
 @media(max-width: 768px){
-    .footer-nav {
-        display: block;
-        margin-top: 20px;
-    }
-
+    
     nav {
         display: none;
     }
@@ -255,4 +240,43 @@ footer {
         grid-template-columns: 1fr;
         margin-top: 50px;
     }
+
+    footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .logoLF {
+        width: 50%;
+        display: block;
+        justify-content: center;
+    }
+
+    .logoLFimage {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    #spanfooter {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .footer-nav {
+        width: 50%;
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+       
+    }
+
+    .footer-list {
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+    }
+       
 }
