--- a/style.css
+++ b/style.css
@@ -260,11 +260,13 @@ footer {
     }
 
     #spanfooter {
-        display: flex;
-        justify-content: space-around;
+        display: block;
+        justify-content: center;
         align-items: center;
+        margin-left: 30px;
+        margin-top: 10px;
     }
-
+    
     .footer-nav {
         width: 50%;
         display:flex;
